force-app/main/default/objects/CD_Activity__c/CD_Activity__c.object-meta.xml
<CustomObject>
    <label>CD Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>