force-app/main/default/objects/CD_Activity__c/fields/CD_Activity__c.field-meta.xml
<CustomField>
    <fullName>CD_Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Payment Returned</fullName>
            </value>
            <value>
                <fullName>Reservation Signed by Client</fullName>
            </value>
            <value>
                <fullName>Signed Reservation Submitted to Developer .</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>