force-app/main/default/objects/CD_Activity__c/fields/CD_Activity_Amount__c.field-meta.xml
<CustomField>
    <fullName>CD_Activity_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>