force-app/main/default/objects/CD_Activity__c/fields/CD_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>