force-app/main/default/objects/CD_Activity__c/fields/CD_Date_Added__c.field-meta.xml
<CustomField>
    <fullName>CD_Date_Added__c</fullName>
    <label>Date Added</label>
    <type>Date</type>
</CustomField>