force-app/main/default/objects/CD_Activity__c/fields/CD_Days_Pending__c.field-meta.xml
<CustomField>
    <fullName>CD_Days_Pending__c</fullName>
    <label>Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>