force-app/main/default/objects/CD_Activity__c/fields/CD_Index_No__c.field-meta.xml
<CustomField>
    <fullName>CD_Index_No__c</fullName>
    <label>Index No</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>