force-app/main/default/objects/CD_Activity__c/fields/CD_Installment_Type__c.field-meta.xml
<CustomField>
    <fullName>CD_Installment_Type__c</fullName>
    <label>Installment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st installment</fullName>
            </value>
            <value>
                <fullName>2nd installment</fullName>
            </value>
            <value>
                <fullName>DLD fees</fullName>
            </value>
            <value>
                <fullName>Admin Fees</fullName>
            </value>
            <value>
                <fullName>Cheque bounced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>