force-app/main/default/objects/CD_Activity__c/fields/CD_Invoice_Issued__c.field-meta.xml
<CustomField>
    <fullName>CD_Invoice_Issued__c</fullName>
    <label>Invoice Issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>