force-app/main/default/objects/CD_Activity__c/fields/CD_Payment__c.field-meta.xml
<CustomField>
    <fullName>CD_Payment__c</fullName>
    <label>Payment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>