force-app/main/default/objects/CD_Activity__c/fields/CD_Property__c.field-meta.xml
<CustomField>
    <fullName>CD_Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>CD_Property__c</referenceTo>
    <relationshipName>Activitys</relationshipName>
    <type>Lookup</type>
</CustomField>