force-app/main/default/objects/CD_Activity__c/fields/Documents_Activity__c.field-meta.xml
<CustomField>
    <fullName>Documents_Activity__c</fullName>
    <label>Documents Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOI and Document received, Payment missing</fullName>
            </value>
            <value>
                <fullName>EOI and Payment received, document missing</fullName>
            </value>
            <value>
                <fullName>Payment &amp; Document received EOI Missing</fullName>
            </value>
            <value>
                <fullName>Reservation issued</fullName>
            </value>
            <value>
                <fullName>Reservation Signed by Client</fullName>
            </value>
            <value>
                <fullName>Signed Reservation Submitted to Developer</fullName>
            </value>
            <value>
                <fullName>Due Diligence pending with Developer</fullName>
            </value>
            <value>
                <fullName>SPA in Process with Developer</fullName>
            </value>
            <value>
                <fullName>SPA issued by Developer</fullName>
            </value>
            <value>
                <fullName>SPA signed by Client</fullName>
            </value>
            <value>
                <fullName>Signed SPA submitted to Developer</fullName>
            </value>
            <value>
                <fullName>Developer signed the SPA</fullName>
            </value>
            <value>
                <fullName>Fully Executed SPA submitted to the Buyer</fullName>
            </value>
            <value>
                <fullName>Oqood Registered</fullName>
            </value>
            <value>
                <fullName>Title deed registration pending</fullName>
            </value>
            <value>
                <fullName>Title deed issued</fullName>
            </value>
            <value>
                <fullName>Cancelltion issued</fullName>
            </value>
            <value>
                <fullName>Totals days to last activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>