force-app/main/default/objects/CD_Activity__c/recordTypes/CD_Document.recordType-meta.xml
<RecordType>
    <fullName>CD_Document</fullName>
    <active>true</active>
    <label>Document</label>
</RecordType>