force-app/main/default/objects/CD_Activity__c/recordTypes/CD_Payment.recordType-meta.xml
<RecordType>
    <fullName>CD_Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>